k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: auth-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-service
  template:
    metadata:
      labels:
        app: content-service
    spec:
      containers:
      - name: content-service
        image: content-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: content-service
spec:
  selector:
    app: content-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscription-service
  template:
    metadata:
      labels:
        app: subscription-service
    spec:
      containers:
      - name: subscription-service
        image: subscription-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: subscription-service
spec:
  selector:
    app: subscription-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streaming-service
  template:
    metadata:
      labels:
        app: streaming-service
    spec:
      containers:
      - name: streaming-service
        image: streaming-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: streaming-service
spec:
  selector:
    app: streaming-service
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation-service
  template:
    metadata:
      labels:
        app: recommendation-service
    spec:
      containers:
      - name: recommendation-service
        image: recommendation-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
spec:
  selector:
    app: recommendation-service
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
